--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -15,7 +15,7 @@ categories: 面试
 
 ** 并发 & 同步
 
-*** synchronized
+*** [[https://tech.meituan.com/2018/11/15/java-lock.html 锁事-美团]] synchronized 
 ****_ 原理，可重入性，可见性
 ****_ 锁升级
 
@@ -25,13 +25,49 @@ categories: 面试
 
 *** 锁
 **** 锁升级
-*****_ 偏向锁
-*****_ 轻量级锁
-*****_ 重量级锁
+***** 偏向锁
+******_ 一直被一个线程所访问
+******_ 在 **Mark Word** 里存储锁偏向的线程 **ID**
+******_: 
+**撤销**：
+只有遇到其他线程尝试竞争偏向锁时，
+持有偏向锁的线程才会释放锁，
+**不会主动释**放偏向锁。
+**等待全局安全点**，暂停拥有偏向锁的线程，
+判断锁对象是否处于被锁定状态。
+恢复无锁（标志位为 01）或轻量级锁（标志位为 00）的状态
+;
+***** 轻量级锁
+******_ 线程会通过自旋的形式尝试获取锁，不会阻塞，从而提高性能。
+******_: 
+无锁状态: 
+在**当前线程的栈帧**中建立一个名为**锁记录**（Lock Record）的空间，
+用于存储锁对象目前的 **Mark Word** 的拷贝，
+然后拷贝对象头中的 **Mark Word** 复制到锁记录中。
+CAS 操作尝试将对象的 **Mark Word** **更新**为指向 **Lock Record** 的指针，
+并将 **Lock Record** 里的 **owner** 指针指向对象的 **Mark Word**。
+更新**成功**： 线程就拥有了该对象的锁，锁标志位设置为“00”。
+更新**失败**： 对象的 Mark Word 是否**指向当前线程的栈帧**？
+只有当前一个等待线程，自旋；
+自旋超过次数，或来第三个，膨胀。
+;
+*****_ 重量级锁：管程
 
-****_ 乐观
-****_ 悲观
-****_ CAS
+****_: 
+**乐观**: 只是在更新数据的时候去判断之前有没有别的线程更新了这个数据，
+没有被更新，当前线程将自己修改的数据成功写入。
+已经被其他线程更新，则根据不同的实现方式执行不同的操作（报错或重试）
+;
+****_: 
+**悲观**: 使用数据的时候一定有别的线程来修改数据,
+在获取数据的时候会先加锁,
+确保数据不会被别的线程修改。
+;
+**** **CAS**
+*****_ 乐观锁中的重试
+*****_ **ABA问题**: AtomicStampedReference
+*****_ **只能保证一个共享变量的原子操作**: AtomicReference
+*****_ **循环时间长开销大**: 只能保证一个共享变量的原子操作
 **** 死锁
 *****_ 产生条件
 *****_ 排查
@@ -194,7 +230,6 @@ left side
 ## MySQL
 
 
-![one-to-many-json-tree]({{ site.url }}/assets/imgs/resume/mysql.svg)
 ```plantuml
 @startmindmap MySQL 脑图
 
