--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -69,14 +69,65 @@ categories: 面试
 
 `Synchronized` 的语义底层是通过一个 `monitor` 的对象来完成，其实 `wait/notify` 等方法也依赖于 `monitor` 对象，这就是为什么只有在同步的块或者方法中才能调用 `wait/notify` 等方法，否则会抛出 **java.lang.IllegalMonitorStateException** 的异常的原因。
 
+- monitorenter & monitorexit
+- ACC_SYNCHRONIZED 
 
 ![sync-markword]({{ site.url }}/assets/imgs/resume/sync-markword.png)
 
+机制与 `AQS` 是很相似的，只不过 `AQS` 中是一个同步队列多个等待队列。
+
 ![sync-flow]({{ site.url }}/assets/imgs/resume/sync-flow.png)
 
+##### 结构
+```c++
+ObjectMonitor() {
+    _header       = NULL;
+    _count        = 0;
+    _waiters      = 0,       // 等待中的线程数
+    _recursions   = 0;       // 线程重入次数
+    _object       = NULL;    // 存储该 monitor 的对象
+    _owner        = NULL;    // 指向拥有该 monitor 的线程
+    _WaitSet      = NULL;    // 等待线程 双向循环链表_WaitSet 指向第一个节点
+    _WaitSetLock  = 0 ;
+    _Responsible  = NULL ;
+    _succ         = NULL ;
+    _cxq          = NULL ;   // 多线程竞争锁时的单向链表
+    FreeNext      = NULL ;
+    _EntryList    = NULL ;   // _owner 从该双向循环链表中唤醒线程，
+    _SpinFreq     = 0 ;
+    _SpinClock    = 0 ;
+    OwnerIsThread = 0 ;
+    _previous_owner_tid = 0; // 前一个拥有此监视器的线程 ID
+  }
+```
+- `_owner`：初始时为 `NULL`。当有线程占有该 `monitor` 时 `owner` 标记为该线程的 `ID`。当线程释放 `monitor` 时 `owner` 恢复为 `NULL`。`owner` 是一个临界资源 `JVM` 是通过 `CAS` 操作来保证其线程安全的。
+- `_cxq`：竞争队列所有请求锁的线程首先会被放在这个队列中（单向）。`_cxq` 是一个临界资源 `JVM` 通过 `CAS` 原子指令来修改 `_cxq` 队列。
+    - 每当有新来的节点入队，它的 `next` 指针总是指向之前队列的头节点，而 `_cxq` 指针会指向该新入队的节点，所以是后来居上。
+- `_EntryList`： `_cxq` 队列中**有资格成为候选资源的线程**会被移动到该队列中。
+- `_WaitSet`: 等待队列因为调用 `wait` 方法而**被阻塞**的线程会被放在该队列中。
 
-- monitorenter & monitorexit
-- ACC_SYNCHRONIZED 
+##### 竞争
+
+- 通过 `CAS` 尝试把 `monitor` 的 `owner` 字段设置为当前线程。
+- 如果设置之前的 `owner` **指向当前线程**，说明当前线程**再次进入** `monitor`，即重入锁执行 `recursions++` , 记录重入的次数。(**可重入性**)
+- 如果当前线程是第一次进入该 `monitor`, 设置 `recursions` 为 1, `_owner` 为**当前线程**，该线程成功获得锁并返回。
+- 如果获取锁失败，则**等待**锁的释放。
+
+##### 等待
+
+- 当前线程被封装成 `ObjectWaiter` 对象 `node`，状态设置成 `ObjectWaiter::TS_CXQ。
+- `for` 循环通过 `CAS` 把 `node` 节点 push 到 `_cxq` 列表中，同一时刻可能有多个线程把自己的 `node` 节点 push 到 `_cxq` 列表中。
+- `node` 节点 push 到 `_cxq` 列表之后，通过**自旋**尝试获取锁，如果还是**没有获取到锁**则通过 `park` 将当前线程**挂起等待被唤醒**。
+- 当该线程**被唤醒**时会从挂起的点继续执行，通过 `ObjectMonitor::TryLock` **尝试获取锁**。
+
+##### 释放
+
+当某个持有锁的线程执行完同步代码块时，会**释放锁**并 `unpark` **后续线程**。
+
+##### notify
+
+`notify` 或者 `notifyAll` 方法可以**唤醒同一个锁监视器下调用 wait 挂起的线程**，将其放入 `_EntryList`。
+
 
 ### TCP 最多可建立多少个连接？
 ```
