--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -113,22 +113,31 @@ long[] threadIds = bean.findDeadlockedThreads()
 ***** 什么场景下使用的
 ******_ MDC
 ******_ traceid
-*****_ 原理
+*****_ 原理： 每个线程有一个自己的ThreadLocalMap<ThreadLocal, V>
 *****_: 
 hash冲突怎么办: 开放地址法，
-不为 null，且已经过期，则启动谈测试清理
+不为 null，且已经过期，则启动探测试清理
 ;
 *****_ 扩容实现
 *****_ 内存泄漏产生原因，怎么解决
 **** 线程池
 *****_ 原理
-*****_ 核心参数
-*****_ 线程数设置
+*****_ 线程回收： getTask() 返回 null，线程池只是维持引用，防止 JVM 回收
+***** 核心参数
+******_ corePoolSize
+******_ maximumPoolSize
+******_ keepAliveTime
+******_ TimeUnit
+******_ workQueue: BlockingQueue
+******_ threadFactory
+****** RejectedExecutionHandler：关闭了或者加不了线程处理了调用
+*******_ AbortPolicy： 抛 RejectedExecutionException
+*******_ CallerRunsPolicy
+*******_ DiscardOldestPolicy：最早的出队，执行这个
+*******_ DiscardPolicy：啥也不做
+*****_ 线程数设置： IO密集型和CPU密集型
 *****_ 参数动态调整后变化过程 *
 *****_ 线程抛异常怎么办 *
-
-
-left side
 
 ** 线程
 *** 线程状态
