--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -131,6 +131,63 @@ ObjectMonitor() {
 
 ---
 
+### 线程池
+
+#### 线程获取任务
+
+`getTask()`
+
+![threadpool-gettask]({{ site.url }}/assets/imgs/resume/threadpool-gettask.jpg)
+
+走👈🏻的是不可回收的核心线程，走👉🏻的是限 keepalive 时间，非核心线程 + 可回收的核心线程。
+
+如果返回的是 `null`，则将 `ctl` cas(-1)。
+
+调用 `processWorkerExit` 清理线程。
+
+获取任务不为 null，会上自己的一把锁执行任务。
+
+#### 参数动态化
+
+##### setCorePoolSize
+
+![threadpool-setcoresize]({{ site.url }}/assets/imgs/resume/threadpool-setcoresize.jpg)
+
+##### setKeepAliveTime
+
+如果时间改小，则 `interruptIdleWorkers`。
+
+```java
+final ReentrantLock mainLock = this.mainLock;
+mainLock.lock();
+try {
+    for (Worker w : workers) {
+        Thread t = w.thread;
+        // 尝试获得锁成功，则表明其空闲
+        if (!t.isInterrupted() && w.tryLock()) {
+            try {
+                t.interrupt();
+            } catch (SecurityException ignore) {
+            } finally {
+                w.unlock();
+            }
+        }
+        if (onlyOne)
+            break;
+    }
+} finally {
+    mainLock.unlock();
+}
+```
+
+##### setMaximumPoolSize
+
+`interruptIdleWorkers`。
+
+#### 异常处理
+
+---
+
 ### TCP 最多可建立多少个连接？
 ```
 fs.file-max： 当前系统可打开的最大数量
