--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -170,12 +170,18 @@ hash冲突怎么办: 开放地址法，
 ****_ 头插法有什么问题，为什么线程不安全 
 
 *** arraylist
-****_ 数组加transient
-****_ 扩容原理
+****_ 数组加transient: 重写了 readObject 和 writeObject
+****_ 扩容原理: +50%
 
 
-** 动态代理
-***_ spring aop的理解，解决什么问题,实现原理
+** [[https://www.cnblogs.com/tuyang1129/p/12878549.html AOP]] 动态代理 
+*** spring aop
+**** 理解
+*****_: 
+以不同于 OOP 的方式思考程序结构，模块化的关键是 Aspect
+Aspect 能够实现跨越多种类型和对象的关注点（例如事务管理）的模块化。
+; 
+**** 解决什么问题,实现原理
 ***_ jdk动态代理,cglib区别，优缺点
 
 ** 反射
