--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -186,6 +186,127 @@ try {
 
 #### 异常处理
 
+##### submit
+
+```java
+public Future<?> submit(Runnable task) {
+    if (task == null) throw new NullPointerException();
+    RunnableFuture<Void> ftask = newTaskFor(task, null);
+    execute(ftask);
+    return ftask;
+}
+
+protected <T> RunnableFuture<T> newTaskFor(Callable<T> callable) {
+    return new FutureTask<T>(callable);
+}
+
+// FutureTask::run
+public void run() {
+    // ...
+    try {
+        Callable<V> c = callable;
+        if (c != null && state == NEW) {
+            V result;
+            boolean ran;
+            try {
+                result = c.call();
+                ran = true;
+            } catch (Throwable ex) {
+                result = null;
+                ran = false;
+                // 生吞了异常
+                setException(ex);
+            }
+            if (ran)
+                set(result);
+        }
+    } finally {
+        // ...
+    }
+}
+// FutureTask::setException
+protected void setException(Throwable t) {
+    if (STATE.compareAndSet(this, NEW, COMPLETING)) {
+        // 将异常设置为结果
+        outcome = t;
+        STATE.setRelease(this, EXCEPTIONAL); // final state
+        finishCompletion();
+    }
+}
+
+private V report(int s) throws ExecutionException {
+    Object x = outcome;
+    if (s == NORMAL)
+        return (V)x;
+    if (s >= CANCELLED)
+        throw new CancellationException();
+    // 抛出异常
+    throw new ExecutionException((Throwable)x);
+}
+
+public V get() throws InterruptedException, ExecutionException {
+    int s = state;
+    if (s <= COMPLETING)
+        s = awaitDone(false, 0L);
+    // 获得结果
+    return report(s);
+}
+```
+
+只有在 `get()` 时抛出异常。
+
+
+##### execute
+
+任务都是由 `Worker` 执行。
+
+```java
+private final class Worker extends AbstractQueuedSynchronizer implements Runnable {
+    public void run() {
+        runWorker(this);
+    }
+
+    final void runWorker(Worker w) {
+        Thread wt = Thread.currentThread();
+        Runnable task = w.firstTask;
+        w.firstTask = null;
+        w.unlock(); // allow interrupts
+        boolean completedAbruptly = true;
+        try {
+            while (task != null || (task = getTask()) != null) {
+                w.lock();
+                // If pool is stopping, ensure thread is interrupted;
+                // if not, ensure thread is not interrupted.  This
+                // requires a recheck in second case to deal with
+                // shutdownNow race while clearing interrupt
+                if ((runStateAtLeast(ctl.get(), STOP) ||
+                     (Thread.interrupted() &&
+                      runStateAtLeast(ctl.get(), STOP))) &&
+                    !wt.isInterrupted())
+                    wt.interrupt();
+                try {
+                    beforeExecute(wt, task);
+                    try {
+                        task.run();
+                        afterExecute(task, null);
+                    } catch (Throwable ex) {
+                        // 遇到异常，抛出异常
+                        afterExecute(task, ex);
+                        throw ex;
+                    }
+                } finally {
+                    task = null;
+                    w.completedTasks++;
+                    w.unlock();
+                }
+            }
+            completedAbruptly = false;
+        } finally {
+            processWorkerExit(w, completedAbruptly);
+        }
+    }
+}
+```
 ---
 
 ### TCP 最多可建立多少个连接？
