--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -118,10 +118,7 @@ long[] threadIds = bean.findDeadlockedThreads()
 hash冲突怎么办: 开放地址法，
 不为 null，且已经过期，则启动探测试清理
 ;
-*****_ 扩容实现
-*****_ 内存泄漏产生原因，怎么解决
-**** 线程池
-*****_ 原理
+*****_ 扩容实现dui xiang
 *****_ 线程回收： getTask() 返回 null，线程池只是维持引用，防止 JVM 回收
 ***** 核心参数
 ******_ corePoolSize
@@ -150,7 +147,7 @@ hash冲突怎么办: 开放地址法，
 *****_ 无限 Object.wait()
 *****_ 无限 Thread.join()
 *****_ LockSupport.park
-**** TIMED_WAITING
+**** TIMED_WAITING;
 *****_ Thread.sleep
 *****_ 有限 Object.wait()
 *****_ 有限 Thread.join()
@@ -166,26 +163,43 @@ hash冲突怎么办: 开放地址法，
 ****_ 原理, put & get
 ****_ 8转红黑树?
 ****_ 什么时候扩容? 0.75？
-****_ 扩容步骤，为什么分高低位
-****_ 头插法有什么问题，为什么线程不安全 
-
-*** arraylist
-****_ 数组加transient: 重写了 readObject 和 writeObject
-****_ 扩容原理: +50%
-
-
-** [[https://www.cnblogs.com/tuyang1129/p/12878549.html AOP]] 动态代理 
+****_ 扩容步骤，为什么分高低位;ml AOP]] 动态代理 
 *** spring aop
 **** 理解
 *****_: 
 以不同于 OOP 的方式思考程序结构，模块化的关键是 Aspect
 Aspect 能够实现跨越多种类型和对象的关注点（例如事务管理）的模块化。
-; 
-**** 解决什么问题,实现原理
-***_ jdk动态代理,cglib区别，优缺点
+;
+*****_: 
+解决什么问题:
+1. 提供声明式企业服务（事务）；
+2. 让用户实现自定义 Aspect，以 AOP 补充他们对 OOP 的使用。
+;
+*****_: 
+实现原理： 默认（实现了接口）动态代理，
+配置了 Aspect，创建 Bean 时创建代理对象。
+;
+*** JDK 动态代理 & cglib
+**** JDK 动态代理
+*****_ InvocationHandler & Proxy.newProxyInstance
+*****_ 优点：原生，生成代理类速度快
+*****_ 缺点：必须实现接口，反射回调速度慢
+**** CGLIB
+*****_: 
+ASM字节码生成框架，直接对需要代理的类的字节码进行操作，
+生成这个类的一个子类，并重写了类的所有可以重写的方法
+;
+***** 优点
+******_ 不需要接口
+******_  原来类的子类可以对所有方法代理
+******_  效率高，和编写的普通类没啥区别
+***** 缺点
+******_ 需要继承，final 类 gg
+******_  重写方法，final 或 private 方法 gg
+******_  操作字节码，代理类生成较慢
 
 ** 反射
-***_ 原理
+***_ [[https://www.cnblogs.com/chanshuyi/p/head_first_of_reflection.html 反射-陈树义]]原理
 
 ** NIO
 ***_ 实现原理
