--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -474,7 +474,17 @@ EXSIT和IN语句组成的布尔表达式
 ****_ skiplist
 ****_ 用途
 *** String
-****_ SDS vs. C
+****_ int
+****_ long
+****_: 
+raw(embstr **SDS**)
+
+struct sdshdr { // 字符串长度 
+    int len // buf数组中未使用的字节数 
+    int free // 字节数组，用于保存字符串 
+    char buf[] 
+}
+;
 *** hyperloglog
 ****_ 优缺点
 
