--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -467,26 +467,154 @@ EXSIT和IN语句组成的布尔表达式
 @startmindmap
 * Redis
 ** 数据结构
+
 *** Hash
-****_ rehash
-****_ 负载因子
+**** 数据结构
+*****_ ziplist
+*****_:
+哈希表
+typedef struct dictht {
+    // 哈希表数组
+    dictEntry **table
+    // 哈希表大小
+    unsigned long size
+    // 哈希表大小掩码，用于计算索引值
+    // 总是等于 size - 1
+    unsigned long sizemask
+    // 该哈希表已有节点的数量
+    unsigned long used
+
+} dictht
+;
+*****_:
+哈希表节点
+typedef struct dictEntry {
+    // 键
+    void *key
+    // 值
+    union {
+        void *val
+        uint64_t u64
+        int64_t s64
+    } v
+    // 指向下个哈希表节点，形成链表
+    struct dictEntry *next
+
+} dictEntry
+;
+*****_:
+字典
+typedef struct dict {
+    // 类型特定函数
+    dictType *type
+    // 私有数据
+    void *privdata
+    // 哈希表 ht[1]只在 rehash 使用
+    dictht ht[2]
+    // rehash 索引
+    // 当 rehash 不在进行时，值为 -1
+    int rehashidx; /* rehashing not in progress if rehashidx == -1 */
+} dict
+;
+**** 负载因子
+*****_ 没有 BG ht[0].used / ht[0].size > 1
+*****_ 有 BG ht[0].used / ht[0].size > 5
+*****_ BG 会启动子进程，copy-on-write，提高效率，提高负载因子，避免 re
+*****_ ht[0].used / ht[0].size < 0.1 收缩 
+**** rehash
+*****_ 1. 为 ht[1] 分配空间， 让字典同时持有 ht[0] 和 ht[1] 两个哈希表
+*****_ 2. rehashidx = 0，表示开始
+*****_ 3. 开始对桶内元素 rehash，完成后 hashidx++，表示下个桶位置
+*****_ 4. ht[0] 所有的 rehash 完，hashidx = -1
+
+*** Set
+****_ 无序的 string 集合
+**** 数据结构
+*****_: 
+typedef struct **intset** {
+    // 保存元素所使用的类型的长度
+    uint32_t encoding
+    // 元素个数
+    uint32_t length
+    // 保存元素的数组
+    int8_t contents[]
+} intset
+;
+*****_ hashset
+
 *** Sorted Set
 ****_ skiplist
+****_ ziplist
 ****_ 用途
+
 *** String
 ****_ int
 ****_ long
 ****_: 
-raw(embstr **SDS**)
+raw(embstr < 39b **SDS**)
 
-struct sdshdr { // 字符串长度 
+struct **sdshdr** { // 字符串长度 
     int len // buf数组中未使用的字节数 
     int free // 字节数组，用于保存字符串 
     char buf[] 
 }
 ;
+**** 特点
+*****_ 常数复杂度获取字符串长度，内置了长度
+*****_ 杜绝缓冲区溢出，空间分配测测策略
+*****_:
+减少修改字符串时带来的内存重分配次数
+< 1Mb --> *2
+>= 1Mb --> +1Mb
+free 记录未使用的空间，需要时删除
+;
+*****_ 二进制安全
+*****_ 最大 512Mb
+
+
 *** hyperloglog
-****_ 优缺点
+**** 优缺点
+*****_ 概率数据结构统计唯一的事物
+*****_ < 1% 的误差
+*****_ 最多用 12k
+*****_ 技术上是不同的数据结构，但是编码成 string
+
+
+*** List
+**** 数据结构
+*****_: **节点**
+typedef structlis tNode{ 
+    struct listNode* prev // 前置节点 
+    struct listNode* next // 后置节点 
+    void* value // 节点值 可放任何节点 
+} listNode
+;
+*****_: **链表**
+typedef struct list {  
+    listNode *head // 表头节点
+    listNode *tail // 表尾节点
+    unsigned long len // 链表包含的节点数量
+    void* (*dup)(void* ptr) // 节点复制函数
+    void (*free)(void* ptr) // 节点释放函数
+    int (*match)(void* ptr, void* key) // 节点对比函数
+} list
+;
+*****_ ziplist 节约内存
+**** 使用场景
+*****_ 社交网络最后更新的 post
+*****_ 进程间交互生产者-消费者
+**** 特点
+*****_ 上限 list，LTRIM
+*****_ 阻塞操作 B{L|R}{PUSH|POP}
+*****_ 循环列表，可靠队列 LMOVE
+
+*** bitmap
+****_ 数据结构并不真实存在，string
+****_ 最大 512M， 2^32
+**** 用途
+*****_ 各种实时分析
+*****_ 存储与对象 id 相关的空间高效的高性能的 bool 信息
+
 
 
 ** 集群
