--- a/_posts/2021-04-06-DDIA.md
+++ b/_posts/2021-04-06-DDIA.md
@@ -161,3 +161,26 @@ $ db_get 42
 而这查找是 `O(n)`。所以需要加 **索引**（index）,是从主数据衍生的**附加**（additional）结构。
 
 > 大致思想是，**保存一些额外的元数据作为路标**，帮助你找到想要的数据。
+
+> 权衡。加快了查询速度，但是每个索引会减慢写入速度。
+
+### Hash
+
+hash map
+
+最简单的是保留内存中的 `hash` 映射。
+
+
+---
+
+追加一个文件，问题是如何避免耗尽磁盘空间。
+
+简单的方案：分段、压缩。
+- 日志分为特定大小的段；
+- 当到指定大小时，关闭当前段，开新段；
+- 压缩靠丢弃重复键，只保留每个键的最新值。
+
+
+
+
+
