--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -309,6 +309,24 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 ```
 ---
 
+### Redis Cluster
+
+- `6379` 服务客户端；
+- `16379` cluster bus，节点间通信的二进制通道；
+  - 故障检测
+  - 配置更新
+  - 故障转移授权
+
+不使用一致性 hash，使用 `hash slot`。有 `16384 slot`，`CRC16(key) mod 16384` 来分配。e.g.
+
+- Node A contains hash slots from 0 to 5500.
+- Node B contains hash slots from 5501 to 11000.
+- Node C contains hash slots from 11001 to 16383.
+
+假如要 + D，就把 A，B，C 中的一些 `hash slot`
+
+---
+
 ### TCP 最多可建立多少个连接？
 ```
 fs.file-max： 当前系统可打开的最大数量
