--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -323,7 +323,37 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 - Node B contains hash slots from 5501 to 11000.
 - Node C contains hash slots from 11001 to 16383.
 
-假如要 + D，就把 A，B，C 中的一些 `hash slot`
+增删节点：
+- 假如要 + D，就把 A，B，C 中的一些 `hash slot`
+- 假如要 - A，就把 A 中的 `hash slot` 移动啊B，C 中
+
+**hash tag**
+
+`this{foo}` 和 `another{foo}` 在一个 `hash slot` 中，可以在一条命令中执行多键操作。
+
+**master slave**
+
+`A` & `B` & `C` 每个增加一个 `slave` 节点。
+
+`B` GG 后， `B1` 被选举新的 `master`。
+
+**一致性保证**
+
+特定情况下，可能回丢失系统向客户端确认的写入。
+
+原因是使用异步复制：
+- 客户端写入 master B;
+- master B 回复 OK;
+- master B 传播写到 B1, B2, B3。
+
+丢失数据可能：
+1. 假如，master B 回复后， gg 了，还没来得及传播，B1 当选，就丢失了写数据。
+
+> 如同其他数据库，每 s 同步到硬盘一样。可强制同步复制、写(**WAIT**)，但是回降低性能。即使同步写也不能保证强一致性。
+
+2.  网络分区，B 和 客户端 Z1 与其他分区了。Z1 能写入 B。如果分区持续足够久时间让 B1 在分区的多数侧提升为 master，则 Z1 同时发送给 B 的写入将丢失。
+
+> **node timeout**: Z1 能够发送到 B 的写入量有一个 max window：如果分区的多数侧已经有足够的时间来选举一个 slave作为 master，那么少数侧的每个主节点都将停止接受写入
 
 ---
 
