--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -631,9 +631,9 @@ typedef struct list {
 ***_ 各个节点间怎么通信的
 
 ** 可用性
-***_ 与数据库一致性
+***_ 与数据库一致性 *
 ***_ 缓存雪崩 多 key 集体失效
-***_ 缓存击穿 单热点 key 失效，
+***_ 缓存击穿 单热点 key 失效
 ***_ 缓存穿透，猛攻 key 不存在，布隆过滤器
 ***_ 怎么保证redis和mysql的一致性
 
