--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -698,6 +698,8 @@ typedef struct list {
 ** BASE
 
 ** 幂等
+
+** 康威定律
 @endmindmap
 ```
 
@@ -792,6 +794,12 @@ linux 下一切皆文件，包括 socket。所以每当进程打开一个 socket
 *** bean创建过程
 *** 事务失效及原因
 *** 怎么加载类
+
+*** @Component & @Bean 的区别
+****_ @Component class 没有 CGLIB，@Bean + @Configuration 有 CGLIB，有完整的 Spring lifecycle
+****_ @Component 作用于类，@Bean 作用于方法
+
+*** 用到了哪些设计模式
 @endmindmap
 ```
 
