--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -355,6 +355,19 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 
 > **node timeout**: Z1 能够发送到 B 的写入量有一个 max window：如果分区的多数侧已经有足够的时间来选举一个 slave作为 master，那么少数侧的每个主节点都将停止接受写入
 
+
+#### 容错性
+
+##### 心跳和 gossip 消息
+
+heartbeat:
+- ping
+- pong
+- 两个都包含重要的配置信息
+
+gossip 消息：
+- 
+
 ---
 
 ### TCP 最多可建立多少个连接？
