--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -460,8 +460,20 @@ heartbeat:
 - ping
 - pong
 - 两个都包含重要的配置信息
+- 每秒发 ping 给恒定数量的随机节点；
+- 每个节点都确保 ping 未发送 ping 或接收到 pong 的时间超过 NODE_TIMEOUT 时间一半的所有其他节点。
 
-gossip 消息：
+> 假设 100 个节点， 60s 超时。每 30s 发 99 个 ping。总共 330 ping/s
+
+心跳包内容
+- Node ID；
+- currentEpoch & configEpoch
+- node flags，表明是 slave、master 和其他单字节的节点信息；
+- 发送节点的 hash slot 的位图；如果是从节点，就主节点的位图；
+- 发送者 BASE TCP 端口；
+- 发送者视角的集群状态
+- 如果是 slave，其 master 
+
 ---
 
 ### TCP 最多可建立多少个连接？
