--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -631,7 +631,9 @@ typedef struct list {
 ***_ 各个节点间怎么通信的
 
 ** 可用性
-***_ 与数据库一致性 *
+*** 与数据库一致性 *
+****_ cache aside
+****_ write through
 ***_ 缓存雪崩 多 key 集体失效
 ***_ 缓存击穿 单热点 key 失效
 ***_ 缓存穿透，猛攻 key 不存在，布隆过滤器
@@ -650,10 +652,16 @@ typedef struct list {
 
 ** 持久化
 *** AOF
+****_ 命令的实时写入
+****_ 对 AOF 文件的重写
 ****_ 阻塞？
 ****_ 什么时候使用
 *** RDB
-***_ 用处
+**** rdbSave
+*****_ SAVE： 直接调用 rdbSave，阻塞；
+*****_ BGSAVE： fork 子进程，子进程调用 rdbSave，仍处理请求
+****_ rdbLoad
+****_ 用处
 ****_ 什么时候使用
 
 ** 管道
