--- a/_posts/2021-05-27-查漏补缺.md
+++ b/_posts/2021-05-27-查漏补缺.md
@@ -163,7 +163,7 @@ hash冲突怎么办: 开放地址法，
 ****_ 原理, put & get
 ****_ 8转红黑树?
 ****_ 什么时候扩容? 0.75？
-****_ 扩容步骤，为什么分高低位;ml AOP]] 动态代理 
+****_ 扩容步骤，为什么分高低位
 *** spring aop
 **** 理解
 *****_: 
@@ -652,11 +652,34 @@ typedef struct list {
 
 ** 持久化
 *** AOF
+**** 优点
+*****_ durable 更高，fsync 策略不同
+*****_ append only，不会出太多问题
+*****_:
+当 AOF 文件太大，自动后台重写。
+Redis 继续写入旧文件。生成的文件足够小保留当前数据库。
+第二个文件 ready，切换过去，开始写入新文件
+;
+*****_ 以简单和易懂的方式存一个接一个的操作
+**** 缺点
+*****_ 更大
+*****_ 有不可重新的 BUG
 ****_ 命令的实时写入
-****_ 对 AOF 文件的重写
+**** 对 AOF 文件的重写
+*****_ BGREWRITEAOF
+*****_ 在不影响服务客户端的情况下重建日志
 ****_ 阻塞？
 ****_ 什么时候使用
+**** durable 
 *** RDB
+**** 优点
+*****_ 紧凑的时间点的 Redis 数据。每小时保存最后 24 小时的数据，每 30 天一次快照
+*****_ 利于灾难恢复，单一的紧凑文件
+*****_ 最大化性能，因为父进程只是 fork 子进程
+*****_ 重启相对较快
+**** 缺点
+*****_ 不适用最小化数据丢失
+*****_ 如果数据库太大 fork() 耗时，ms ~ 1s
 **** rdbSave
 *****_ SAVE： 直接调用 rdbSave，阻塞；
 *****_ BGSAVE： fork 子进程，子进程调用 rdbSave，仍处理请求
