--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -331,7 +331,7 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 
 **hash tag**
 
-`this{foo}` 和 `another{foo}` 在一个 `hash slot` 中，可以在一条命令中执行多键操作。
+`this{foo}` 和 `another{foo}` 在一个 `hash slot` 中，可以在一条命令中执行多键操作。**核心网络模型**
 
 **master slave**
 
@@ -339,7 +339,7 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 
 `B` GG 后， `B1` 被选举新的 `master`。
 
-**一致性保证**
+**一致性保证****核心网络模型**
 
 特定情况下，可能回丢失系统向客户端确认的写入。
 
@@ -378,10 +378,7 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 ##### 客户端和服务端扮演的角色
 
 **责任**
-- 存数据；
-- 获取集群状态；
-  - 路由 key 到正确的节点；
-    - 客户端接到 `-MOVED` & `-ASK` 错误后跳转
+- 存数据；**核心网络模型**
     - 客户端持有 `key` -> `Node` 的映射能增加性能
 - 自动发现其他节点；
   - gossip 协议
@@ -473,6 +470,139 @@ heartbeat:
 - 发送者 BASE TCP 端口；
 - 发送者视角的集群状态
 - 如果是 slave，其 master 
+
+---
+
+### 分布式锁
+
+#### 最简单 
+
+```
+SETNX lock 1
+```
+
+- 程序处理业务逻辑异常，没及时释放锁
+- 进程挂了，没机会释放锁
+
+#### 设置租期
+
+```
+SET lock 1 EX 10 NX
+```
+
+- 锁过期：客户端 1 操作共享资源耗时太久，导致锁被自动释放，之后被客户端 2 持有
+> 可能评估操作共享资源的时间不准确导致的
+- 释放别人的锁：客户端 1 操作共享资源完成后，却又释放了客户端 2 的锁
+> 一个客户端释放了其它客户端持有的锁
+
+#### 解决锁被别人释放
+
+```
+// 加锁，使用 UUID 
+SET lock $uuid EX 20 NX
+
+// 判断锁是自己的，才释放
+if redis.call("GET",KEYS[1]) == ARGV[1]
+then
+    return redis.call("DEL",KEYS[1])
+else
+    return 0
+end
+```
+
+#### 解决锁过期时间不好评估
+
+watchdog
+
+#### 仍存在的问题
+
+`主从集群 + 哨兵`,主库宕机，从库自动提升为主库。主从切换时，这个分布式锁不安全。
+
+#### 总结
+
+- **死锁**：设置过期时间
+- **过期时间评估不好，锁提前过期**：守护线程，自动续期
+- **锁被别人释放**：锁写入唯一标识，释放锁先检查标识，再释放
+
+---
+
+### RedLock
+
+1. 客户端先获取「当前时间戳T1」
+2. 客户端依次向这 5 个 Redis 实例发起**加锁请求**（用前面讲到的 `SET` 命令），且**每个请求**会**设置超时时间**（毫秒级，要远小于锁的有效时间），如果某一个实例加锁失败（包括网络超时、锁被其它人持有等各种异常情况），就立即向下一个 Redis 实例申请加锁
+3. 如果客户端从 >=3 个（**大多数**）以上 Redis 实例**加锁成功**，则再次获取「当前时间戳T2」，如果 `T2 - T1 < 锁的过期时间`，此时，认为客户端**加锁成功**，否则认为加锁失败
+4. 加锁**成功**，去操作共享资源
+5. 加锁**失败**，向「全部节点」发起**释放锁请求**（前面讲到的 Lua 脚本释放锁）
+
+---
+
+### Redis 线程模型
+
+#### 单线程事件循环
+
+Redis 6.0- **核心网络模型**是**单 Reactor**。
+
+![redis-thread]({{ site.url }}/assets/imgs/resume/redis-thread.jpg)
+
+- client:
+  - *conn: socket 指针；
+  - *db: 选择的数据库；
+  - querybuf: 读入缓冲区；
+  - buf: 写出缓冲区；
+  - reply: 写出数据链表；
+- aeApiPoll:  Event Loop 的核心函数，监听等待读写数据触发
+- acceptTcpHandler: **连接应答处理器**。使用系统调用 `accept` **接收来自客户端的新连接**，为新连接注册绑定 `readQueryFromClient`，以备后续客户端 `TCP` 连接；
+- readQueryFromClient: **命令读取处理器**，解析并执行客户端的请求命令
+- beforeSleep: 
+- sendReplyToClient: **命令回复处理器**，当一次事件循环之后写出缓冲区中还有数据残留，则这个处理器会被注册绑定到相应的连接上，等连接触发写就绪事件时，它会将写出缓冲区剩余的数据回写到客户端。
+
+工作原理：
+- 启动，开启 `Event Loop`，注册 `acceptTcpHandler` 到端口对应的 `fd`，**等待新连接到来**；
+- 客户端 & 服务端建立网络连接；
+- `acceptTcpHandler` 被调用，主线程使用 `AE` 的 `API` 将 `readQueryFromClient` 绑定到新连接的 `fd`，初始化一个 `client` 绑定这个客户端连接；
+- c -> r 发送请求命令，触发读就绪事件，主线程调用 `readQueryFromClient` 读取客户端发送来的命令存入 `client->querybuf`；
+- 调用 `processInputBuffer`，其中调用 `processInlineBuffer/processMultibulkBuffer` 解析命令，最后调用 `processCommand` 执行命令；
+- 根据请求命令的类型，分配相应的**命令执行器**执行，最后调用 `addReply` 将响应写入 `client->buf`（16KB） / `client->reply`（前面的不够，自动切换至此链表）,最后把 `client` 添加到 `clients_pending_write` LIFO 队列；
+- `EventLoop` 主线程执行 `beforeSleep --> handleClientsWithPendingWrites` 遍历 `clients_pending_write` 调用 `writeToClient` 把缓冲数据写道客户端，如果还有数据，注册 `sendReplyToClient` 到写就绪事件，
+
+#### 多线程异步任务
+
+Redis 4.0+
+
+耗时的操作异步化，避免阻塞单线程的事件循环。
+
+![redis-async]({{ site.url }}/assets/imgs/resume/redis-async.jpg)
+
+- `UNLINK`: `del` 异步版本，不会同步删除数据，只是 `key` 从 `keyspace` 中暂时移除，将任务添加到一个异步队列，最后由后台线程去删除。 
+
+#### 多线程网络模型
+
+`I/O threading`
+
+![redis-io-threading]({{ site.url }}/assets/imgs/resume/redis-io-threading.jpg)
+
+- 多个线程（Sub Reactors）各自维护一个独立的事件循环；
+- 由 Main Reactor 负责接收新连接并分发给 Sub Reactors 去独立处理；
+- 最后 Sub Reactors 回写响应给客户端。
+
+![redis-multi-thread]({{ site.url }}/assets/imgs/resume/redis-multi-thread.jpg)
+
+- client 发送请求，触发**读就绪事件**，主线程不会曲度 client 的命令，将 `client` 放入 LIFO 队列 `clients_pending_read`；
+- Event Loop 中，`beforeSleep -->handleClientsWithPendingReadsUsingThreads`，利用 Round-Robin 轮询负载均衡策略，把 `clients_pending_read` 队列中的连接均匀地分配给 I/O 线程各自的本地 FIFO 任务队列 `io_threads_list[id]` 和主线程自己，I/O 线程通过 socket 读取客户端的请求命令，存入 client->querybuf 并解析第一个命令，但不执行命令，主线程忙轮询，等待所有 I/O 线程完成读取任务；
+- 主线程和所有 I/O 线程都完成了读取任务，主线程结束忙轮询，遍历 `clients_pending_read` 队列，执行所有客户端连接的请求命令，先调用 processCommandAndResetClient 执行第一条已经解析好的命令，然后调用 processInputBuffer 解析并执行客户端连接的所有命令，...；
+
+---
+
+### Redis Pipeline
+
+`RTT`: c -> s & s -> c
+
+客户端使用 `pipeline`，服务端被强迫使用内存 queue 响应。
+
+> 最好批次设置合理的数字， 10K，读取响应，再发 10K。
+
+- 只需要一次 RTT
+- 极大提升了每秒能处理的操作的数量。 socket I/O 角度来看服务一条命令比较昂贵，调用 `read()` 和 `write()` 系统调用， user -> kernel 切换。
 
 ---
 
