--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -137,7 +137,7 @@ ObjectMonitor() {
 
 `getTask()`
 
-![threadpool-gettask]({{ site.url }}/assets/imgs/resume/threadpool-gettask.jpg)
+![threadpool-gettask]({{ site.url }}/assets/imgs/resume/threadpool-gettask.png)
 
 走👈🏻的是不可回收的核心线程，走👉🏻的是限 keepalive 时间，非核心线程 + 可回收的核心线程。
 
@@ -151,7 +151,7 @@ ObjectMonitor() {
 
 ##### setCorePoolSize
 
-![threadpool-setcoresize]({{ site.url }}/assets/imgs/resume/threadpool-setcoresize.jpg)
+![threadpool-setcoresize]({{ site.url }}/assets/imgs/resume/threadpool-setcoresize.png)
 
 ##### setKeepAliveTime
 
