--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -327,7 +327,7 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 
 增删节点：
 - 假如要 + D，就把 A，B，C 中的一些 `hash slot`
-- 假如要 - A，就把 A 中的 `hash slot` 移动啊B，C 中
+- 假如要 - A，就把 A 中的 `hash slot` 移动到B，C 中
 
 **hash tag**
 
@@ -339,7 +339,7 @@ private final class Worker extends AbstractQueuedSynchronizer implements Runnabl
 
 `B` GG 后， `B1` 被选举新的 `master`。
 
-**一致性保证****核心网络模型**
+**一致性保证核心网络模型**
 
 特定情况下，可能回丢失系统向客户端确认的写入。
 
@@ -608,12 +608,36 @@ Redis 4.0+
 
 ### TCP 最多可建立多少个连接？
 ```
-fs.file-max： 当前系统可打开的最大数量
-fs.nr_open： 当前系统单个进程可打开的最大数量
+/proc/sys/fs/file-max： 当前系统可打开的最大数量
+/proc/sys/fs/nr_open： 当前系统单个进程可打开的最大数量
 nofile： 每个用户的进程可打开的最大数量
 ```
 
 linux 下一切皆文件，包括 socket。所以每当进程打开一个 socket 时候，内核实际上都会创建包括 file 在内的几个内核对象。该进程如果打开了两个 socket，那么它的内核对象结构如下图。
 
 ![tcp-socket-file]({{ site.url }}/assets/imgs/resume/tcp-socket-file.jpg)
+
+
+
+### TCP 三次连接
+
+TCP 连接需要双方达成的**共识**：
+- Socket
+  - 互联网地址标志符和端口
+- 序列号
+  - 追踪通信发起方发送的数据包序号
+  - 接收方可以通过序列号向发送方确认某个数据包的成功接收
+- 窗口大小
+  - 流控制
+
+为什么需要三次握手？
+- 阻止重复历史连接的初始化
+- 对通信双方的初始序列号进行初始化
+  - 可能的问题：多次发送，数据被路由丢失，到达接收方无法按照发送顺序
+  - 1. 接收方可通过序号去重
+  - 2. 发送方对未 ACK 的重新发
+  - 3. 接收方可按照序号排序
+- 2 ? > 3 ?
+  - 2 次不够
+  - > 3 浪费
 
