--- a/_posts/2021-05-27-查漏补缺mind.md
+++ b/_posts/2021-05-27-查漏补缺mind.md
@@ -641,3 +641,61 @@ TCP 连接需要双方达成的**共识**：
   - 2 次不够
   - > 3 浪费
 
+
+---
+
+### 缓存一致性
+
+#### Cache Aside
+
+![Cache Aside]({{ site.url }}/assets/imgs/resume/cache-aside.png)
+
+通用，多读的最适合。
+
+优势：
+- 缓存 down, 仍然可用；
+- 缓存种的数据模型可与数据库种的不一样。
+
+劣势：
+- 写策略是直接写入数据，会造成不一致。
+
+解决：
+- 弱一致性：使用 `TTL` 直到时间过去才能一致。
+- 必须保证数据新鲜：invalidate 缓存条目或
+
+#### Read Through
+
+![Read Through]({{ site.url }}/assets/imgs/resume/read-through.png)
+
+
+与 `cache aside` 的不同：
+
+Cache Aside | Read Through
+---------|----------
+ 应用获取数据装配缓存 | 库或者独立缓存提供者 
+ 数据结构可以不一致 | 数据结构一致 
+
+优势：
+- 适用于相同的数据被请求多次；
+
+劣势：
+- 可能造成缓存不一致，通过写入策略解决；
+- 第一次请求，总是导致 `cache miss` 导致过量的缓存加载。可以通过预热加载。
+
+
+#### Write Through
+
+![Write Through]({{ site.url }}/assets/imgs/resume/write-through.png)
+
+先写缓存，再写数据库。
+
+与 `read through` 配合。
+
+
+#### Write Back
+![Write Back]({{ site.url }}/assets/imgs/resume/write-back.png)
+
+适用于重写。
+
+与 `read through` 结合。
+
