--- a/_posts/2020-04-11-JVM.md
+++ b/_posts/2020-04-11-JVM.md
@@ -85,14 +85,14 @@ categories: Java
 ### 对象内存布局
 
 - 对象头：
-    - 对象自身运行时的数据 `Mark Word`
+    - 对象自身运行时的数据 `Mark Word`（8 字节）
         - HashCode
         - GC 年龄分代
         - 锁状态
         - 线程持有的锁
         - 偏向线程 `ID`
         - 偏向时间戳
-    - 类型指针：确定这个对象时哪个类型的实例
+    - 类型指针：确定这个对象时哪个类型的实例（8 字节，指针压缩后 4 字节）
     - 数组长度，如果对象是数组
 - 实例数据：**相同宽度**的字段总是被**分配到一起**存放，父类分配在子类之前(`+XX:FieldsAllocationStyle`)。子类较窄的允许插入到父类间隙中(`+XX:CompactFields`)。
 - 对齐填充：8字节整数倍。
